feat: update bio copy
changed "life-long coder" to "life-long tinkerer"

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           />
         </figure>
         <p class="headline">
-          Howdy! 👋🏻 I'm Cody, life-long coder and current Software Engineer III
+          Howdy! 👋🏻 I'm Cody, life-long tinkerer and current Software Engineer
+          III
           <a
             href="https://twitter.com/dominos"
             target="_blank"
