feat: add frost overlay

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <header class="hero">
+      <div class="frost-overlay"></div>
       <div class="container">
         <figure class="avatar">
           <img
